--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     },
     "author": "rjsmall90",
     "license": "ISC",
+    "type": "module",
     "dependencies": {
       "express": "^4.21.2"
     }
