--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,13 @@
     "description": "server for connecting api for about me page",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "rjsmall90",
     "license": "ISC",
     "type": "module",
     "dependencies": {
-      "express": "^4.21.2"
+        "express": "^4.21.2",
+        "nodemailer": "^7.0.5"
     }
-  }
-  
+}
