--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "type": "module",
     "dependencies": {
         "cors": "^2.8.5",
+        "dotenv": "^17.2.1",
         "express": "^4.21.2",
         "nodemailer": "^7.0.5"
     }
