github api connected; repo GET route built

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 REACT_APP_EMAIL_ADDRESS=rjsmall90@gmail.com
 REACT_APP_EMAIL_PASSWORD=lfbo krtf vvav suss
+REACT_APP_GITHUB_TOKEN=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
