updating for cloudflare deploy

--- a/ui/package.json
+++ b/ui/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "pages:build": "npx @cloudflare/next-on-pages",
+    "build": "next build && next export",
+    "deploy": "wrangler publish",
     "start": "next start",
     "lint": "next lint"
   },
@@ -18,7 +18,6 @@
     "sharp": "^0.34.3"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.16",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
