--- a/ui/package.json
+++ b/ui/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx @opennextjs/opennext build",
+    "build": "next build",
     "deploy": "wrangler publish",
     "start": "next start",
     "lint": "next lint"
