--- a/ui/package.json
+++ b/ui/package.json
@@ -5,18 +5,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "deploy": "wrangler publish",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@opennextjs/cloudflare": "^1.8.3",
     "dotenv": "^17.2.1",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sharp": "^0.34.3"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -27,7 +24,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "wrangler": "^4.38.0"
+    "typescript": "^5"
   }
 }
